--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.3.1",
     "server-home": "file:",
     "vue": "^3.5.13",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -39,7 +40,7 @@
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.2",
     "prettier": "^3.4.2",
-    "tailwindcss": "^4.0.6",
+    "sass": "^1.85.0",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.1",
