--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "postcss": "^8.5.2",
     "prettier": "^3.4.2",
     "sass": "^1.85.0",
+    "svgo": "^3.3.2",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-vue-devtools": "^7.7.1",
     "vitest": "^3.0.5",
     "vue-tsc": "^2.2.0"
