--- a/docker/compose/arr-compose.yaml
+++ b/docker/compose/arr-compose.yaml
@@ -1,6 +1,6 @@
 services:
   jellyseerr:
-    image: fallenbagel/jellyseerr:2.5.1
+    image: fallenbagel/jellyseerr:latest
     container_name: jellyseerr
     environment:
       - LOG_LEVEL=debug
@@ -9,6 +9,12 @@ services:
       - 5055:5055
     volumes:
       - /srv/docker/jellyseerr/config:/app/config
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:5055/api/v1/status || exit 1
+      start_period: 20s
+      timeout: 3s
+      interval: 15s
+      retries: 3
     restart: unless-stopped
     env_file:
       - .env
@@ -87,7 +93,7 @@ services:
     volumes:
       - ${ARRPATH}Jellyfin/config:/config
       - ${ARRPATH}MoviesMerged:/data/movies
-      - ${ARRPATH}Sonarr/tvshows:/data/TVShows
+      - ${ARRPATH}Sonarr/tvshows:/data/tvshows
       - ${ARRPATH}Janitorr/leaving-soon:/data/leaving-soon
       - ${ARRPATH}Lidarr/music:/data/Music
     restart: unless-stopped
@@ -161,15 +167,26 @@ services:
       - jellystat-db
   janitorr:
     container_name: janitorr
-    image: ghcr.io/schaka/janitorr:stable
+    image: ghcr.io/schaka/janitorr:jvm-stable
+    user: 1000:1000
     volumes:
-      - ${ARRPATH}Janitorr/config/application.yml:/workspace/application.yml
+      - ${ARRPATH}Janitorr/config/application.yml:/config/application.yml
       - ${ARRPATH}Janitorr/logs:/logs
       - ${ARRPATH}Janitorr:/data
       - ${ARRPATH}MoviesMerged:/data/movies
       - ${ARRPATH}Sonarr/tvshows:/data/tvshows
+    environment:
+      # Uses https://github.com/dmikusa/tiny-health-checker supplied by paketo buildpacks
+      - THC_PATH=/health
+      - THC_PORT=8081
+    depends_on:
+      jellyseerr:
+        condition: service_healthy
+        restart: true
     healthcheck:
-      test: wget -T5 -qO- http://localhost:8081/health | grep UP || exit 1
+      test:
+        - CMD
+        - /workspace/health-check
       start_period: 30s
       interval: 5s
       retries: 3
