--- a/docker/compose/arr-compose.yaml
+++ b/docker/compose/arr-compose.yaml
@@ -1,6 +1,6 @@
 services:
   seerr:
-    image: fallenbagel/seerr:latest
+    image: ghcr.io/seerr-team/seerr:latest
     init: true
     container_name: seerr
     environment:
@@ -9,7 +9,7 @@ services:
     ports:
       - 5055:5055
     volumes:
-      - ${ARRPATH}/Seerr/config:/app/config
+      - ${ARRPATH}Seerr/config:/app/config
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:5055/api/v1/status || exit 1
       start_period: 20s
