--- a/docker/compose/arr-compose.yaml
+++ b/docker/compose/arr-compose.yaml
@@ -1,14 +1,15 @@
 services:
-  jellyseerr:
-    image: fallenbagel/jellyseerr:latest
-    container_name: jellyseerr
+  seerr:
+    image: ghcr.io/seerr-team/seerr:latest
+    init: true
+    container_name: seerr
     environment:
       - LOG_LEVEL=debug
       - PORT=5055
     ports:
       - 5055:5055
     volumes:
-      - /srv/docker/jellyseerr/config:/app/config
+      - ${ARRPATH}Seerr/config:/app/config
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:5055/api/v1/status || exit 1
       start_period: 20s
@@ -180,7 +181,7 @@ services:
       - THC_PATH=/health
       - THC_PORT=8081
     depends_on:
-      jellyseerr:
+      seerr:
         condition: service_healthy
         restart: true
     healthcheck:
